# dependence

./: 404.html  Makefile  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: distribute.yml  test.yml
api/freeze/: index.html
api/update/: index.html
api/upgrade/: index.html
cli/: index.html
contributing/: index.html
docs/: cli.md  index.md
docs/api/: upgrade.md
search/: search_index.json
src/dependence/: _utilities.py  freeze.py  update.py  upgrade.py
tests/: conftest.py  test_update.py  test_upgrade.py
tests/test_projects/test_project_a/: pyproject.toml  requirements.txt  setup.cfg
tests/test_projects/test_project_b/: pyproject.toml  requirements.txt
tests/test_projects/test_project_c/: pyproject.toml  requirements.txt
