[build-system]
requires = [
    "setuptools~=80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "test-project-b"
version = "0.0.0"
requires-python = ">=3.9"
dependencies = [
    "pip>=25.0",
    "setuptools>=80.0.0",
    "ruff~=0.0",
]

[project.optional-dependencies]
jsonpointer = ["jsonpointer>=2.0"]
mypy = ["mypy>=1.0"]

[tool.setuptools]
packages = ["test_project_b"]

[tool.black]
line-length = 79
target-version = [
    "py39",
    "py310",
    "py311",
    "py312",
    "py313"
]
